# grpc_python

./: README.md  docker-compose.yml  pyproject.toml
dynamoDB/data/: shared-local-instance.db
grpc_python/: grpc_client.py  grpc_server.py  user_pb2.py  user_pb2_grpc.py
grpc_python/json_data/: users.json
grpc_python/protos/: proto.sh  user.proto
grpc_python/servicers/: database.py  pynamodb.py  user.py
hello/: client.py  hello_pb2.py  hello_pb2_grpc.py  server.py
