[tool.poetry]
name = "grpc-python"
version = "0.1.0"
description = ""
authors = ["Takashi Sato <t.sato17123@gmail.com>"]
readme = "README.md"
packages = [{include = "grpc_python"}]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.51.1"
grpcio-tools = "^1.51.1"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
grpcio-reflection = "^1.51.1"
boto3 = "^1.26.41"
autopep8 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
